tags are visible on user/homepage + greeting and user page link for admins is fixxed

--- a/frontend/public/css/user.css
+++ b/frontend/public/css/user.css
@@ -93,3 +93,23 @@ button {
 h2 {
     margin-bottom: 20px;
 }
+
+/* Tag Styling */
+.tag-container {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+  
+  .tag {
+    border-radius: 5px;
+    margin-bottom: 5px;
+    margin-right: 5px;
+    padding: 5px;
+    border: 1px solid #ccc;
+  }
+  
+  .remove-tag {
+    cursor: pointer;
+    margin-left: 5px;
+  }
